# UniPrompt

./: .gitignore  README.md  TRANSPARENCY.md  demo.html  index.html  leaderboard.html  optimize_k_fold.py  pyproject.toml  style.css  stylestwo.css  uniprompt.html  user_func.py  utils.py
config/: GK.json  bbh_navigate.json  eem.json  ethos.json  gk.json  gsm8k.json  human_eval.json  pm.json  sm.json
data/: arc.jsonl  bbh_navigate.jsonl  create_dataset.py  eem_three_retrivals.jsonl  ethos.jsonl  gk.jsonl  gsm8k.jsonl  gsm8k_rationale_default.jsonl  gsm8k_rationale_generated.jsonl  make_bing_ads_dataset.py  medqa.jsonl  pm.jsonl  pm_search.jsonl  samsum.jsonl  sm.jsonl  sm_search.jsonl  sst2.jsonl
data /: ethos.jsonl
data/bbh/algorithmic_multi_step_arithmetic_reasoning/: boolean_expressions.jsonl  logical_deduction_five_objects.jsonl  navigate.jsonl
data/bbh/multilingual_knowledge_and_reasoning/: salient_translation_error_detection.jsonl
data/bbh/natural_language_understanding/: disambiguation_qa.jsonl  formal_fallacies.jsonl  snarks.jsonl
data/bbh/use_of_world_knowledge/: causal_judgement.jsonl  date_understanding.jsonl  movie_recommendation.jsonl
data/mmlu/humanities/: international_law.jsonl  logical_fallacies.jsonl  philosophy.jsonl
data/mmlu/others/: business_ethics.jsonl  global_facts.jsonl  management.jsonl
data/mmlu/social_sciences/: econometrics.jsonl  high_school_macroeconomics.jsonl  sociology.jsonl
data/mmlu/stem/: college_computer_science.jsonl  electrical_engineering.jsonl  machine_learning.jsonl
dataset/: GK.jsonl  ethos.jsonl
examples/: cot.py  demo1.ipynb  demo1.py  ethos.py  gk.py  main.py  opro.py  test.py  uniprompt_default.ipynb  uniprompt_default.py
src/uniprompt/: __init__.py  data.py  evaluate.py  logger.py  papyrus.py  train.py  uniprompt.py  utils.py
src/uniprompt/beam_search/: __init__.py  beam.py
src/uniprompt/feedback/: feedback.py
src/uniprompt/grouping/: __init__.py  group.py
src/uniprompt/history/: history.py
src/uniprompt/metaprompts/: custom.yaml  default.yaml
src/uniprompt/prompts/: custom.yaml  default.yaml
src/uniprompt/utils/: api_utils.py  config_utils.py  metric_utils.py  prompt_utils.py  sampling_utils.py  summary_utils.py
