[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uniprompt"
version = "0.1.0"
authors = [
    { name="Gurusha Juneja", email="t-gujuneja@microsoft.com" },
    { name="Anush Kini", email="t-anushkini@microsoft.com" },
    { name="Amit Sharma", email="amshar@microsoft.com" },
    { name="Nagarajan Natarajan", email="nagarajan.natarajan@microsoft.com" },
]
description = "Python implementation of UniPrompt."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.3.0",
]

[project.urls]
Homepage = "https://aka.ms/UniPrompt"
Code = "https://github.com/microsoft/UniPrompt"

[project.optional-dependencies]
dev = ["black>=24.1.0", "isort>=5.12.0"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
py_version = 310